<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sharepoint Demo</string>
    <string name="action_settings">Settings</string>
    <string name="pending_request">Pending request&#8230;</string>
    <string name="data_connection_no_data_connection">No data connection</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_list_item">Item Details</string>

    <string name="alert_dialog_title">An Error Occurred</string>
    <string name="alert_dialog_ok">@android:string/ok</string>

    <string name="data_id_unknown">Unknown ID</string>
    <string name="data_title_unknown">Unknown Title</string>

    <string name="main_list_create_failure">Unable to create list</string>
    <string name="main_list_create">Add new list</string>

    <string name="main_item_create_failure">Unable to create item</string>
    <string name="main_item_create">Add new item</string>

	<string name="main_item_image_title_default">Sample item</string>
    <string name="main_item_image_url_default">http://www.azulsystems.com/sites/default/files/images/Microsoft_open_tech_logo.jpg</string>
    <string name="main_list_label_lists">Available lists:</string>
    <string name="main_list_label_items">Available items:</string>
    <string name="main_status_error">Error</string>
    <string name="main_status_error_retrieve_lists">: failed to retrieve lists.</string>

	<string name="main_item_create_dialog_title">Add Item</string>
    <string name="main_item_create_dialog_name">Name</string>
	<string name="main_item_create_dialog_address">Image URL</string>
	<string name="main_item_create_dialog_attach_image">Attach image</string>
	<string name="main_item_create_dialog_attached_image">Attached!</string>
    <string name="main_item_create_dialog_save">Create</string>
    <string name="main_item_create_dialog_cancel">@android:string/cancel</string>

    <string name="main_login_dialog_login">Login</string>
    <string name="main_login_dialog_cancel">@android:string/cancel</string>
    <string name="main_login_dialog_passsword">Password</string>
	<string name="main_login_dialog_password_hint">name@domain.com</string>

    <string name="settings_auth_label">Authentication method:</string>
    <string name="settings_auth_opt_cookie">Cookie</string>
    <string name="settings_auth_opt_oauth">OAuth</string>
    <string name="settings_auth_opt_ntlm">NTLM</string>

</resources>
